# open-scores

./: .gitattributes  .gitignore  AUTHORS  CHANGELOG.md  DEVELOPERS.md  Makefile  Makefile.am  README.md  configure.ac  template-part.ly
src/andrea-turchetto/: Andrea-Turchetto-Composizioni.ly  Makefile.am  andrea-turchetto.eps  header.ily  index.ly
src/andrea-turchetto/parts/: turchetto-canon-in-F-sharp-minor.ly  turchetto-chromatic-canon.ly  turchetto-fuga-the-final-countdown.ly  turchetto-intermezzo-in-B-major.ly
src/ferruccio-busoni/drei-albumblätter-BV289/: Ferruccio-Busoni-BV289-Drei-Albumblätter.ly  Makefile.am  header.ily
src/franco-margola/sei-sonatine-facili-dc108/: Franco-Margola-Sei-sonatine-facili.ly  Makefile.am  header.ily
src/franz-liszt/: Makefile.am
src/franz-liszt/am-grabe-richard-wagners-s.202/: Franz-Liszt-Am-Grabe-Richard-Wagners-S.202.ly  Makefile.am  header.ily
src/franz-liszt/en-reve-nocturne-s.207/: Franz-Liszt-En-reve-Nocturne-S.207.ly  Makefile.am  header.ily
src/franz-liszt/la-lugubre-gondola-s.200/: Franz-Liszt-La-lugubre-gondola-S.200.ly  Makefile.am  header.ily
src/franz-liszt/late-works/: Franz-Liszt-Late-Works.ly  Franz-Liszt-by-Nadar-march-1886.eps  Makefile.am  index.ly  ossiasetup.ly
src/franz-liszt/nuages-gris-s.199/: Franz-Liszt-Nuages-Gris-S.199.ly  Makefile.am  header.ily
src/franz-liszt/recueillement-s.204/: Franz-Liszt-Recueillement-S.204.ly  Makefile.am  header.ily
src/franz-liszt/richard-wagner-venezia-s.201/: Franz-Liszt-Richard-Wagner-Venezia-S.201.ly  Makefile.am  header.ily
src/franz-liszt/sancta-dorothea-s.187/: Franz-Liszt-Sancta-Dorothea-S.187.ly  Makefile.am  header.ily
src/franz-liszt/schlaflos-frage-und-antwort-s.203/: Franz-Liszt-Schlaflos-Frage-und-Antwort-S.203.ly  Makefile.am  header.ily
src/franz-liszt/trauervorspiel-und-trauermarsch-s.206/: Franz-Liszt-Trauervorspiel-und-Trauermarsch-S.206.ly  Makefile.am  global.ly  header.ily
src/franz-liszt/unstern-s.208/: Franz-Liszt-Unsern-S.208.ly  Franz-Liszt-Unstern-S.208.ly  Makefile.am  header.ily
src/franz-liszt/wiegenlied-s.198/: Franz-Liszt-Wiegenlied-S.198.ly  Makefile.am
src/franz-liszt/zweite-elegie-s.197/: Franz-Liszt-Zweite-Elegie-S.197.ly  Makefile.am
src/johann-christian-bach/sonata-op-17-5/: JC-Bach-W.A11-Sonata-op-17-5.ly  Makefile.am  header.ily
src/johann-sebastian-bach/: Makefile.am
src/johann-sebastian-bach/cantata-BWV106-actus-tragicus-sonatina/: Makefile.am  header.ily
src/johann-sebastian-bach/cantata-BWV54-aria/: JS-Bach-BWV54-Cantata-Aria.ly  Makefile.am  header.ily
src/johann-sebastian-bach/cantatas/: Makefile.am
src/johann-sebastian-bach/cembalo-konzert-largo-BWV1056-kempff/: JS-Bach-Kempff-Cembalo-Konzert-Largo-BWV1056.ly  Makefile.am  header.ily  smallnotes.ly
src/johann-sebastian-bach/chaconne-fur-violine-BWV1004-busoni/: JS-Bach-Busoni-Chaconne-fur-violine-allein-BWV1004.ly  Makefile.am  header.ily
src/johann-sebastian-bach/chaconne-fur-violine-busoni-BWV1004/: Bach-Busoni-Chaconne-fur-violine-allein-BWV1004.ly  Makefile.am  header.ily
src/johann-sebastian-bach/chorale-preludes/: Makefile.am
src/johann-sebastian-bach/chromatische-fantasie-und-fugue-BWV903/: Makefile.am
src/johann-sebastian-bach/chromatische-fantasie-und-fugue-BWV903-busoni/: JS-Bach-BWV903-Chromatische-Fantasie-und-Fugue.ly  JS-Bach-Busoni-Chromatische-Fantasie-und-Fugue-BWV903.ly  Makefile.am  header.ily
src/johann-sebastian-bach/das-wohltemperierte-klavier-I/: JS-Bach-BWV846-869-Das-Wohltemperierte-Klavier-I.ly  Makefile.am  header.ily  index.ly  macros.ly  manuscript-cover.ly  manuscript-music.ly  manuscript-page00.eps  manuscript-page01.eps  manuscript-page02.eps  manuscript-page03.eps  manuscript-page04.eps  manuscript-page05.eps  manuscript-page06.eps  manuscript-page07.eps  manuscript-page08.eps  manuscript-page09.eps  manuscript-page10.eps  manuscript-page11.eps  manuscript-page12.eps  manuscript-page13.eps  manuscript-page14.eps  manuscript-page15.eps  manuscript-page16.eps  manuscript-page17.eps  manuscript-page18.eps  manuscript-page19.eps  manuscript-page20.eps  manuscript-page21.eps  manuscript-page22.eps  manuscript-page23.eps  manuscript-page24.eps  manuscript-page25.eps  manuscript-page26.eps  manuscript-page27.eps  manuscript-page28.eps  manuscript-page29.eps  manuscript-page30.eps  manuscript-page31.eps  manuscript-page32.eps  (+57 more)
src/johann-sebastian-bach/die-kunst-der-fuge-BWV1080/: JS-Bach-BWV1080-Die-Kunst-der-Fuge.ly  Makefile.am  brief-notes-on-the-completion-of-contrapunctus-xiv-en.ly  brief-notes-on-the-completion-of-contrapunctus-xiv-it.ly  brief-notes-on-the-completion-of-contrapunctus-xiv.ly  bwv1080-subjects-1-2-3-4-permutation.eps  extract-data.sh  header.ily  index.ly  list-of-subjects.ly  macros-fugues-structure.ly  macros.ly  structure-of-the-fugues.ly
src/johann-sebastian-bach/fantasie-und-fuge-BWV904/: JS-Bach-BWV904-Fantasie-und-Fuge.ly  Makefile.am  header.ily  macros.ly  ossiasetup.ly
src/johann-sebastian-bach/fantasie-und-fuge-BWV944/: JS-Bach-BWV944-Fantasie-und-Fuge.ly  Makefile.am  header.ily
src/johann-sebastian-bach/fuga/: Makefile.am
src/johann-sebastian-bach/goldberg-variationen-BWV988/: JS-Bach-BWV1087-13-canon-triplex-six.ly  JS-Bach-BWV988-Goldberg-Variationen.ly  Johann-Sebastian-Bach-oil-canvas-Elias-Gottlieb-1746.ps  Makefile.am  header.ily  index.ly  macros.ly  preface.ly
src/johann-sebastian-bach/inventionen-und-sinfonien-BWV772-801/: JS-Bach-BWV772-801-Inventionen-und-Sinfonien.ly  Makefile.am  circle-of-fifths.ly  header.ily  jsbach-clavier-buchlein-ornament-table.eps  jsbach-clavier-buchlein-ornament-table.ly  ossiasetup.ly
src/johann-sebastian-bach/italienisches-konzert-BWV971/: JS-Bach-BWV971-Italienisches-Konzert.ly  Makefile.am  header.ily
src/johann-sebastian-bach/jesu-meine-freude-BWV610/: Makefile.am
src/johann-sebastian-bach/musikalisches-opfer-BWV1079/: JS-Bach-BWV1079-Musikalisches-Opfer.ly  Makefile.am  header.ily  translate.sh
src/johann-sebastian-bach/organ-concerto-5-andante-BWV596-nemerovsky/: JS-Bach-BWV596-Organ-Concerto-Largo.ly  Makefile.am  (+1 more)
(+834 files in other folders)
