## Process this file with automake to produce Makefile.in

## Copyright (c) 2023 Davide Madrisan <d.madrisan@proton.me>
##
## This program is free software: you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation, either version 3 of the License, or
## (at your option) any later version.
##
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with this program.  If not, see <http://www.gnu.org/licenses/>.

AM_MAKEFLAGS = --no-print-directory

SUBDIRS = sancta-dorothea-s.187 \
	  wiegenlied-s.198 \
	  nuages-gris-s.199 \
	  la-lugubre-gondola-s.200 \
	  richard-wagner-venezia-s.201 \
	  am-grabe-richard-wagners-s.202 \
	  schlaflos-frage-und-antwort-s.203 \
	  recueillement-s.204 \
	  trauervorspiel-und-trauermarsch-s.206 \
	  en-reve-nocturne-s.207 \
	  unstern-s.208
