SUBDIRS = chaconne-fur-violine-BWV1004-busoni \
	  chorale-preludes \
	  chromatische-fantasie-und-fugue-BWV903-busoni \
	  die-kunst-der-fuge-BWV1080 \
	  goldberg-variationen-BWV988 \
	  inventionen-und-sinfonien-BWV772-801 \
	  italienisches-konzert-BWV971 \
	  musikalisches-opfer-BWV1079 \
	  organ-sonata-4-andante-BWV528-stradal \
	  ouverture-nach-franzosischer-art-BWV831 \
	  partitas \
          praeludium-fuge-und-allegro-BWV998 \
	  praeludium-und-fughetta-BWV902 \
	  praludien \
	  praludium-und-fuge-liszt-BWV543-S462 \
	  schafe-konnen-sicher-weiden-BWV208 \
	  siciliano-BWV1031 \
	  suites-anglaises
